k8files/ingress/ingress-resource-web.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: openhack-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: tripviewer
          servicePort: 80
        path: /
